set up laravel/socialite, refs #1

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
+GITHUB_CLIENT_ID=id_here
+GITHUB_CLIENT_SECRET=secret_here
+GITHUB_REDIRECT=redirect_here
+
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
