--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "laravel/socialite": "~2.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
