--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "type": "project",
     "require": {
         "laravel/framework": "5.1.*",
-        "laravel/socialite": "~2.0"
+        "laravel/socialite": "~2.0",
+        "knplabs/github-api": "~1.4"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
