--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "laravel/framework": "5.1.*",
         "laravel/socialite": "~2.0",
-        "knplabs/github-api": "~1.4"
+        "knplabs/github-api": "~1.4",
+        "michelf/php-markdown": "~1.4"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
