--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.1.*",
         "laravel/socialite": "~2.0",
         "knplabs/github-api": "~1.4",
-        "michelf/php-markdown": "~1.4"
+        "michelf/php-markdown": "~1.4",
+        "emojione/emojione": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
