start the laravel 5.1 upgrade, refs #14

--- a/composer.json
+++ b/composer.json
@@ -43,14 +43,15 @@
             "php artisan clear-compiled",
             "php artisan optimize"
         ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
         "post-create-project-cmd": [
-            "php -r \"copy('.env.example', '.env');\"",
             "php artisan key:generate"
         ]
     },
     "config": {
         "preferred-install": "dist"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "stable"
 }
