--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require-dev": {
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "fzaninotto/faker": "^1.5",
+        "doctrine/dbal": "^2.5"
     },
     "autoload": {
         "classmap": [
