--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ GITHUB_CLIENT_ID=id_here
 GITHUB_CLIENT_SECRET=secret_here
 GITHUB_REDIRECT=redirect_here
 
+BUGSNAG_API_KEY=api_key_here
+
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
