--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "knplabs/github-api": "~1.4.13",
         "michelf/php-markdown": "~1.4",
         "emojione/emojione": "dev-master",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "bugsnag/bugsnag-laravel": "1.*"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
